--- a/start/about/about.html
+++ b/start/about/about.html
@@ -18,7 +18,7 @@
 
   <!-- external scripts -->
   <script type="text/javascript" src="..js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="..bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="..bootstrap-5.0.0-beta3/js/bootstrap.min.js"></script>
 </body>
 
 </html>
