--- a/start/index.html
+++ b/start/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Art Sales</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap-5.0.0-beta3-dist/">
 </head>
 
 <body>
@@ -64,7 +64,7 @@
   </div>
   <!-- external scripts -->
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="bootstrap-5.0.0-beta3-dist/"></script>
 </body>
 
 </html>
