--- a/start/about/about.html
+++ b/start/about/about.html
@@ -58,10 +58,10 @@
                                         <a class="nav-link" href="about.html">About Us</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Art Works</a>
+                                        <a class="nav-link" href="../art-works/art-works.html">Art Works</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Artist</a>
+                                        <a class="nav-link" href="../artists/artists.html">Artists</a>
                                     </li>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
@@ -70,8 +70,9 @@
                                             Special
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                            <a class="dropdown-item" href="#">Special 1</a>
-                                            <a class="dropdown-item" href="#">Special 2</a>
+                                            <a class="dropdown-item" href="#">Specials</a>
+                                            <a class="dropdown-item" href="#">New Realease</a>
+                                            <a class="dropdown-item" href="#">Clearance</a>
                                         </div>
                                     </li>
                                 </ul>
