--- a/start/index.html
+++ b/start/index.html
@@ -1,4 +1,3 @@
-<!-- Lab2 -->
 <!DOCTYPE html>
 <html>
 
@@ -15,16 +14,16 @@
         <nav class="home-main-nav">
           <ul>
             <li class="cursive">
-              <a href="#">Assn2</a>
+              <a href="#">Assign3</a>
             </li>
             <li>
               <a href="about/about.html">About</a>
             </li>
             <li>
-              <a href="#">Work</a>
+              <a href="./art-works/art-works.html">ArtWork</a>
             </li>
             <li>
-              <a href="#">Artist</a>
+              <a href="./artists/artists.html">Artists</a>
             </li>
           </ul>
         </nav>
