--- a/start/index.html
+++ b/start/index.html
@@ -54,7 +54,7 @@
       </div>
       <div>
         <img class="circle" src="img/thumbs/106020.jpg" alt="lady2">
-        <h2>Girl with a Pearl Earring</h2>
+        <h2>Girl with a Pearl Earing</h2>
         <p class="left-align">Girl with a Pearl Earring is one of Johannes Vermeer's masterworks and, as the name
           implies, uses a pearl earring for a focal point. Today the painting is kept in the Mauritshuis gallery in The
           Hague. It is sometimes referred to as "the Mona Lisa of the North" or "the Dutch Mona Lisa".</p>
