--- a/start/art-works/art-works.html
+++ b/start/art-works/art-works.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Art Sales - About</title>
+    <title>Art Sales - Art Works</title>
     <link rel="stylesheet" href="../bootstrap-5.0.0-beta3-/css/bootstrap.min.css">
     <link rel="stylesheet" href="../fontawesome-free-5.15.3-web/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
